--- a/.cise.yml
+++ b/.cise.yml
@@ -10,7 +10,7 @@ default:
     - tnpm install --unsafe-perm
   unit_test:
     exec:
-    - tnpm run ie
+    # - tnpm run ie
     - tnpm run chrome
 
     plugin:
