--- a/.cise.yml
+++ b/.cise.yml
@@ -3,6 +3,12 @@
 default:
   prepare:
     exec:
+    - git clone http://gitlab.alibaba-inc.com/node/nvm.git /root/nvm
+    - echo 'source /root/nvm/nvm.sh' >> /root/.bashrc
+    - nvm install 0.12.0
+    # 不要使用 nvm use
+    - nvm alias default 0.12.0
+    # 以上是 linux
     - node -v
     - npm -v
     - npm install -g tnpm --registry=http://registry.npm.alibaba-inc.com
