--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "learning-nightwatch",
   "version": "0.0.0",
-  "author": "Seth McLaughlin ",
+  "author": "宝码",
   "license": "MIT",
   "scripts": {
     "test": "./node_modules/.bin/nightwatch -c ./Nightwatch.js --env default",
